# lstickerconverter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: converter.rs  filesystem.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  types.rs
ui/: index.html
