[package]
name = "lstickerconverter-rs"
version = "1.1.0"
edition = "2024"

[build-dependencies]
tauri-build = "2.6.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.5"
serde_json = "1.0.149"
thiserror = "2.0.18"
image = "0.25.10"
rayon = "1.12.0"
tauri = "2.11.0"